@@ -1,3 +1,7 @@
+2014-05-08  Adam Sjøgren  <asjo@koldfront.dk>
+
+	* mml2015.el (mml2015-display-key-image): New variable.
+
 2014-05-08  Glenn Morris  <rgm@gnu.org>
 
 	* gnus-fun.el (gnus-grab-cam-face):
